--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Themes.csproj
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Themes.csproj
@@ -58,6 +58,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\lib\aspnetmvc\System.Web.Mvc.dll</HintPath>
     </Reference>
+    <Reference Include="System.Web.WebPages, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\orchard-releases\GardenFaire.1.8\src\Orchard.Web\Core\bin\System.Web.WebPages.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
@@ -66,7 +70,9 @@
     </Content>
     <Content Include="Bootstrap_3_1_1_KongwaHill\Readme\Todo.txt" />
     <Content Include="Bootstrap_3_1_1_KongwaHill\Scripts\IE-10.js" />
-    <Content Include="Bootstrap_3_1_1_KongwaHill\Styles\Site.css" />
+    <Content Include="Bootstrap_3_1_1_KongwaHill\Styles\Site.css">
+      <DependentUpon>Site.less</DependentUpon>
+    </Content>
     <Content Include="Bootstrap_3_1_1_KongwaHill\Theme.png" />
     <Content Include="Bootstrap_3_1_1_KongwaHill\Theme.txt" />
     <Content Include="TheThemeMachineDesigner\Styles\Site.css">
@@ -102,7 +108,6 @@
     <Content Include="ThemeWithoutProject\Placement.info" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Bootstrap_3_1_1_KongwaHill\ResourceManifest.txt" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
