--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/BigFont.TheThemeMachineDesigner.csproj
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/BigFont.TheThemeMachineDesigner.csproj
@@ -48,6 +48,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Orchard.Themes">
+      <HintPath>..\Orchard.Themes\bin\Orchard.Themes.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.ComponentModel.DataAnnotations">
@@ -86,16 +89,13 @@
       <Project>{9916839C-39FC-4CEB-A5AF-89CA7E87119F}</Project>
       <Name>Orchard.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Orchard.Themes\Orchard.Themes.csproj">
-      <Project>{cde24a24-01d3-403c-84b9-37722e18dfb7}</Project>
-      <Name>Orchard.Themes</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Controllers\" />
     <Folder Include="Models\" />
+    <Folder Include="Views\ThemeMachineDesigner\" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\ThemeMachineDesignerController.cs" />
     <Compile Include="Filters\SelectThemeFilter.cs" />
     <Compile Include="Services\DesignerFactory.cs" />
   </ItemGroup>
@@ -110,6 +110,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\ThemeSelect.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\less\_ThemeSelect.less" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
