--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Web.config
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Web.config
@@ -39,7 +39,7 @@
         <add assembly="System.Web.Mvc, Version=5.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" namespace="System.Web.Mvc" tagPrefix="mvc"/>
       </controls>
     </pages>
-    <compilation targetFramework="4.5">
+    <compilation targetFramework="4.5" debug="true">
       <assemblies>
         <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
         <add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
