--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/BigFont.TheThemeMachineDesigner.csproj
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/BigFont.TheThemeMachineDesigner.csproj
@@ -72,12 +72,12 @@
   <ItemGroup>
     <Content Include="Module-Todo.txt" />
     <Content Include="Scripts\CssLoader.js" />
-    <Content Include="Styles\module.css">
-      <DependentUpon>module.less</DependentUpon>
+    <Content Include="Styles\testing.css" />
+    <Content Include="Styles\theme-designer.css">
+      <DependentUpon>theme-designer.less</DependentUpon>
     </Content>
     <Content Include="Web.config" />
     <Content Include="Scripts\Web.config" />
-    <Content Include="Styles\Web.config" />
     <Content Include="Properties\AssemblyInfo.cs" />
     <Content Include="Module.txt" />
   </ItemGroup>
@@ -106,19 +106,23 @@
     <Content Include="Views\TraceThemeWrapper.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Styles\less\_TraceTheme.less" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Styles\module.less" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Styles\less\_TraceThemeControls.less" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Views\TraceThemeControls.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Styles\less\_mixins.less" />
+    <Content Include="Styles\less\_TraceTheme.less" />
+    <Content Include="Styles\less\_TraceThemeControls.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\theme-designer.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\theme-designer.css.map">
+      <DependentUpon>theme-designer.css</DependentUpon>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Web.config" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
