--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/Orchard.Azure.MediaServices/Orchard.Azure.MediaServices.csproj
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/Orchard.Azure.MediaServices/Orchard.Azure.MediaServices.csproj
@@ -549,6 +549,50 @@
   <ItemGroup>
     <Content Include="Scripts\lib\MPEG Dash Notice.docx" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\cloudmedia-edit-cloudvideopart.css.map">
+      <DependentUpon>cloudmedia-edit-cloudvideopart.css</DependentUpon>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\cloudmedia-progress.css.map">
+      <DependentUpon>cloudmedia-progress.css</DependentUpon>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\cloudmedia-videoplayer.css.map">
+      <DependentUpon>cloudmedia-videoplayer.css</DependentUpon>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\menu.cloudmedia-mediaproviders.css.map">
+      <DependentUpon>menu.cloudmedia-mediaproviders.css</DependentUpon>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\cloudmedia-admin-asset.css.map">
+      <DependentUpon>cloudmedia-admin-asset.css</DependentUpon>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\cloudmedia-admin-selecttask.css.map">
+      <DependentUpon>cloudmedia-admin-selecttask.css</DependentUpon>
+    </Content>
+    <Content Include="Styles\cloudmedia-edit-assets.css.map">
+      <DependentUpon>cloudmedia-edit-assets.css</DependentUpon>
+    </Content>
+    <Content Include="Styles\cloudmedia-edit-jobs.css.map">
+      <DependentUpon>cloudmedia-edit-jobs.css</DependentUpon>
+    </Content>
+    <Content Include="Styles\cloudmedia-tabs.css.map">
+      <DependentUpon>cloudmedia-tabs.css</DependentUpon>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\cloudmedia-admin-settings.css.map">
+      <DependentUpon>cloudmedia-admin-settings.css</DependentUpon>
+    </Content>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
