--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Themes.csproj
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Themes.csproj
@@ -283,6 +283,9 @@
     <Content Include="Bootstrap_3_1_1_Base\Styles\Less\Bootstrap\variables.less" />
     <Content Include="Bootstrap_3_1_1_Base\Styles\Less\Bootstrap\wells.less" />
     <Content Include="Bootstrap_3_1_1_Base\Styles\Less\Site\_TheThemeMachine-Bootstrap-Navigation.less" />
+    <Content Include="Bootstrap_3_1_1_Base\Styles\Site.css.map">
+      <DependentUpon>Site.css</DependentUpon>
+    </Content>
     <None Include="Bootstrap_3_1_1_Base\Styles\Site.less" />
     <Content Include="Bootstrap_3_1_1_GardenFaire\Content\Web.config" />
     <Content Include="Bootstrap_3_1_1_GardenFaire\Placement.info" />
@@ -351,6 +354,15 @@
     <Content Include="Bootstrap_3_1_1_Base\Views\MenuItem.cshtml" />
     <Content Include="Bootstrap_3_1_1_Base\Views\Menu.cshtml" />
     <Content Include="Bootstrap_3_1_1_Base\Views\Parts\MenuWidget-MenuWidget.cshtml" />
+    <Content Include="Bootstrap_3_1_1_Base\Styles\Theme.css.map">
+      <DependentUpon>Theme.css</DependentUpon>
+    </Content>
+    <Content Include="TheThemeMachineDesigner\Styles\Site.css.map">
+      <DependentUpon>Site.css</DependentUpon>
+    </Content>
+    <Content Include="Bootstrap_3_1_1_KongwaHill\Styles\Site.css.map">
+      <DependentUpon>Site.css</DependentUpon>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Bootstrap_3_1_1_Base\Views\Layout.cshtml" />
