Add initial working drag and drop.

--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/BigFont.TheThemeMachineDesigner.csproj
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/BigFont.TheThemeMachineDesigner.csproj
@@ -72,6 +72,7 @@
   <ItemGroup>
     <Content Include="Module-Todo.txt" />
     <Content Include="Scripts\CssLoader.js" />
+    <Content Include="Scripts\DragAndDrop.js" />
     <Content Include="Styles\theme-designer.css">
       <DependentUpon>theme-designer.less</DependentUpon>
     </Content>
