Use JSON2 for local storage.

--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/BigFont.TheThemeMachineDesigner.csproj
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/BigFont.TheThemeMachineDesigner.csproj
@@ -74,6 +74,7 @@
     <Content Include="Module-Todo.txt" />
     <Content Include="Scripts\CssLoader.js" />
     <Content Include="Scripts\DragAndDrop.js" />
+    <Content Include="Scripts\JSON2.js" />
     <Content Include="Styles\theme-designer.css">
       <DependentUpon>theme-designer.less</DependentUpon>
     </Content>
