--- a/Orchard.Source.1.8.1/src/Orchard.Web/Orchard.Web.csproj
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Orchard.Web.csproj
@@ -224,7 +224,7 @@
           <AutoAssignPort>False</AutoAssignPort>
           <DevelopmentServerPort>30321</DevelopmentServerPort>
           <DevelopmentServerVPath>/OrchardLocal</DevelopmentServerVPath>
-          <IISUrl>http://localhost/Orchard181</IISUrl>
+          <IISUrl>http://localhost:8082</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
